# hAIrem

./: .env  .env.example  .envrc  .gitignore  .gitleaksignore  CHANGELOG.md  CONFORMITE_TASKS.md  CONTRIBUTING.md  README.md  docker-compose.yml  docker-compose.yml~  package-lock.json  package.json  passwords.txt  playwright.config.ts  pyproject.toml  rapport-analyse-complete-hairem.md  rapport-conformite-global.md  rattrapage.md  synthese-tests-couverture.md
apps/h-core/: Dockerfile  README.md  debug_run.py  pyproject.toml
apps/h-core/src/: internal_health_check.py  main.py
apps/h-core/src/agents/: expert_domotique.py
apps/h-core/src/domain/: agent.py  memory.py
apps/h-core/src/infrastructure/: cache.py  graph_schema.surql  ha_client.py  home_assistant.py  llm.py  plugin_loader.py  redis.py  surrealdb.py
apps/h-core/src/models/: agent.py  hlink.py
apps/h-core/src/services/: ha_event_worker.py  media_cleanup.py  metrics.py  relationship_bootstrapper.py  seeding.py  sleep_scheduler.py
apps/h-core/src/skills/: package_manager.py
apps/h-core/src/utils/: privacy.py  prompts.py  visual.py
apps/h-core/tests/: conftest.py  test_13_6.py  test_13_6_command.py  test_18_4_inter_agent_discussion.py  test_25_5_finalization.py  test_25_7_vault.py  test_agent_config.py  test_agent_context.py  test_agent_creation.py  test_agent_electra.py  test_agent_entropy.py  test_agent_lisa.py  test_agent_management.py  test_agent_relationships.py  test_agent_renarde.py  test_audio_pipeline.py  test_cache.py  test_conflict_resolution.py  test_decay.py  test_emotional_history.py  test_event_subscription.py  test_expert_ha_logic.py  test_exterior_space.py  test_generic_agent.py  test_graph_memory.py  test_ha_client.py  test_ha_event_worker.py  test_llm.py  test_llm_cache.py  test_location_tracking.py  test_logging.py  test_media_cleanup.py  test_memory.py  test_mobile_location.py  test_neural_voice.py  test_per_user_memory.py  test_pluggable_logic.py  test_plugin_loader.py  test_polish_v2.py  test_privacy.py  (+30 more)
apps/h-core/tests/dummy_agent/: expert.yaml  logic.py
apps/h-core/tests/integration/: test_dynamic_skills.py  test_dynamic_skills_mapping.py  (+2 more)
(+973 files in other folders)
