[tool.poetry]
name = "h-core"
version = "0.1.0"
description = "hAIrem Core Orchestrator"
authors = ["hAIrem Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
redis = "^5.0.1"
watchdog = "^4.0.0"
PyYAML = "^6.0.1"
openai = "^1.10.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "UP", "B"]
ignore = []
