[tool.poetry]
name = "h-core"
version = "0.1.0"
description = "hAIrem Core Orchestrator"
authors = ["hAIrem Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
redis = "^5.0.1"
watchdog = "^4.0.0"
PyYAML = "^6.0.1"
openai = "^1.10.0"
 litellm = "^1.30.0"
 surrealdb = "^0.3.2"
 httpx = "^0.26.0"
 aiohttp = "^3.9.0"
 fastembed = "^0.2.0"
 python-dotenv = "^1.0.1"
faster-whisper = "^1.0.3"
torch = "^2.0.0"
pyttsx3 = "^2.90"
 websockets = "^12.0"
 librosa = "^0.10.0"
 openwakeword = "^0.6.0"
 pyaudio = "^0.2.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E701", "E501"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: tests unitaires sans I/O (rapides, mockés)",
    "integration: tests avec services réels Redis/SurrealDB (nécessite docker-compose)",
    "e2e: tests end-to-end complets",
    "slow: tests > 5s",
]
filterwarnings = [
    "ignore::DeprecationWarning:datetime",
    "ignore::DeprecationWarning:pydantic",
]
